preprocessing dataset with torch

--- a/TrashModel.ipynb
+++ b/TrashModel.ipynb
@@ -18,6 +18,9 @@
    ],
    "source": [
     "import torch\n",
+    "import torchvision\n",
+    "import torch.optim as optim\n",
+    "import torch.nn as nn\n",
     "torch.cuda.is_available()"
    ]
   },
@@ -92,6 +95,15 @@
    "source": [
     "trashData = \"TrashData\"\n",
     "splitfolders.ratio(\"garbage_classification\", trashData, seed=42, ratio = (.8, .2), group_prefix = None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = torchvision.datasets.ImageFolder(root = )"
    ]
   },
   {
@@ -415,6 +427,13 @@
     "TrashModel = torchvision.models.mobilenet_v2()\n",
     "TrashModel.to(GPU_DEVICE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
