fix data set errors

--- a/TrashModel.ipynb
+++ b/TrashModel.ipynb
@@ -82,15 +82,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Copying files: 15515 files [00:05, 2596.35 files/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trashData = \"TrashData\"\n",
     "\n",
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,22 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = torchvision.datasets.ImageFolder(root = trashData)\n",
+    "train_dataset = torchvision.datasets.ImageFolder(root = trashTrainDataPath, transform = transform)\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = torchvision.datasets.ImageFolder(root='./data', train=False,\n",
-    "                                       download=True, transform=transform)\n",
+    "test_dataset = torchvision.datasets.ImageFolder(root = trashTestDataPath, transform=transform)\n",
     "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
@@ -163,7 +154,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from TrashModel import TrashModel"
+   ]
   }
  ],
  "metadata": {
