finalizing model, beginning training

--- a/TrashModel.ipynb
+++ b/TrashModel.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "credits: https://www.kaggle.com/datasets/mostafaabla/garbage-classification\n"
+    "dataset credits: https://www.kaggle.com/datasets/mostafaabla/garbage-classification\n"
    ]
   },
   {
@@ -87,6 +87,16 @@
     "trashData = \"TrashData\"\n",
     "\n",
     "# splitfolders.ratio(\"garbage_classification\", trashData, seed=42, ratio = (.8, .2), group_prefix = None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# is there a way I can create an input pipeline for the data?\n",
+    "# will augment data, etc"
    ]
   },
   {
@@ -146,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building the Model"
+    "## Training the Model"
    ]
   },
   {
@@ -156,6 +166,17 @@
    "outputs": [],
    "source": [
     "from TrashModel import TrashModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trashModel = TrashModel(GPU_DEVICE)\n",
+    "\n",
+    "trashModel.train_custom_model(train_loader=train_loader)"
    ]
   }
  ],
@@ -175,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.12 (main, Jun 11 2023, 05:26:28) [GCC 11.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
