--- a/TrashModel.ipynb
+++ b/TrashModel.ipynb
@@ -203,21 +203,7 @@
       "  warnings.warn(\n",
       "/home/shawn/.local/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
       "  warnings.warn(msg)\n",
-      "                                       \r"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m trashModel \u001b[39m=\u001b[39m TrashModel(GPU_DEVICE)\n\u001b[0;32m----> 3\u001b[0m trashModel\u001b[39m.\u001b[39;49mtrain_custom_model(train_loader\u001b[39m=\u001b[39;49mtrain_loader)    \n",
-      "File \u001b[0;32m~/Projects/TrashVision/TrashModel.py:48\u001b[0m, in \u001b[0;36mTrashModel.train_custom_model\u001b[0;34m(self, train_loader)\u001b[0m\n\u001b[1;32m     46\u001b[0m labels\u001b[39m=\u001b[39m labels\u001b[39m.\u001b[39mto(device\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgpu)\n\u001b[1;32m     47\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()  \u001b[39m# Zero the gradients\u001b[39;00m\n\u001b[0;32m---> 48\u001b[0m outputs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m(inputs)  \u001b[39m# Forward pass\u001b[39;00m\n\u001b[1;32m     49\u001b[0m loss \u001b[39m=\u001b[39m criterion(outputs, labels)  \u001b[39m# Calculate loss\u001b[39;00m\n\u001b[1;32m     50\u001b[0m loss\u001b[39m.\u001b[39mbackward()  \u001b[39m# Backpropagation\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/Projects/TrashVision/TrashModel.py:22\u001b[0m, in \u001b[0;36mTrashModel.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, x):\n\u001b[0;32m---> 22\u001b[0m     inputs, labels \u001b[39m=\u001b[39m x\n\u001b[1;32m     23\u001b[0m     inputs, labels \u001b[39m=\u001b[39m inputs\u001b[39m.\u001b[39mcuda(), labels\u001b[39m.\u001b[39mcuda()\n\u001b[1;32m     24\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmobilenet((inputs, labels))\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+      "                                                                                        \r"
      ]
     }
    ],
@@ -225,6 +211,95 @@
     "trashModel = TrashModel(GPU_DEVICE)\n",
     "trashModel.cuda()\n",
     "trashModel.train_custom_model(train_loader=train_loader)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(trashModel.state_dict(), './TrainingAccuracyWeights/model1_weights')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verifying Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['biological',\n",
+       " 'battery',\n",
+       " 'paper',\n",
+       " 'clothes',\n",
+       " 'trash',\n",
+       " 'cardboard',\n",
+       " 'shoes',\n",
+       " 'plastic',\n",
+       " 'green-glass',\n",
+       " 'metal',\n",
+       " 'white-glass',\n",
+       " 'brown-glass']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Path to your test directory\n",
+    "test_dir = './TrashData/val/'\n",
+    "\n",
+    "# Get a list of subdirectories (labels)\n",
+    "labels = [label for label in os.listdir(test_dir) if os.path.isdir(os.path.join(test_dir, label))]\n",
+    "\n",
+    "labels = labels[::-1]\n",
+    "labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Load the trained model\n",
+    "model = TrashModel()\n",
+    "model.load_state_dict(torch.load('./TrainingAccuracyWeights/model1_weights'))\n",
+    "model.eval()\n",
+    "\n",
+    "# Prepare a test data loader\n",
+    "#test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=..., shuffle=False)\n",
+    "\n",
+    "# Define a function to get class labels from class indices\n",
+    "def get_class_labels(class_indices,class_labels):\n",
+    "    return [class_labels[idx] for idx in class_indices]\n",
+    "\n",
+    "# Iterate through test loader batches\n",
+    "for inputs, labels in test_loader:\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(inputs)\n",
+    "    \n",
+    "    _, predicted_classes = torch.max(outputs, 1)\n",
+    "    predicted_labels = get_class_labels(predicted_classes.tolist(), labels)\n",
+    "    \n",
+    "    # Print or process predicted labels\n",
+    "    print(predicted_labels)\n"
    ]
   }
  ],
